--- a/static/style.css
+++ b/static/style.css
@@ -43,6 +43,10 @@ h2 {
   max-width: 20.3em;
 }
 
+h3 {
+  text-align: center;
+}
+
 .left,
 .right {
   padding: 1em;
@@ -88,7 +92,15 @@ main>* {
   position: relative;
 }
 
-input:not([type='radio']) {
+#message-input {
+  padding: 0.4em 1em 0.4em 2em;
+  font-size: 100%;
+  margin-right: 0.4em;
+  color: #3b0133;
+  border: 2px solid #ff0066;
+}
+
+input:not([type='radio'], #message-input) {
   display: inline-block;
   flex-grow: 1;
   padding: 0.4em 1em 0.4em 2em;
@@ -141,7 +153,7 @@ button:hover {
 }
 
 
-.channels>*:not(input, label, h2, button),
+.channels>*:not(input, label, h2, h3, button),
 .right-heading {
   background-color: #cd67dd;
   border: 2px solid #ff0066;
