--- a/static/style.css
+++ b/static/style.css
@@ -153,7 +153,7 @@ button:hover {
 }
 
 
-.channels>*:not(input, label, h2, h3, button),
+.channels>*:not(input, label, h2, h3, button, .channels-form),
 .right-heading {
   background-color: #cd67dd;
   border: 2px solid #ff0066;
@@ -163,7 +163,13 @@ button:hover {
   text-align: center;
 }
 
-.channels div:hover {
+/* Check here not done with css */
+.channels-form {
+  width: auto;
+  height: auto;
+}
+
+.channels div:hover:not(.channels-form) {
   background-color: #9f29b1;
   cursor: pointer;
 }
